fix(notification-badge): updated display and align

--- a/src/patternfly/components/NotificationBadge/notification-badge.scss
+++ b/src/patternfly/components/NotificationBadge/notification-badge.scss
@@ -72,10 +72,11 @@
   }
 
   .pf-icon-attention-bell {
+    display: inline-block;
     line-height: var(--pf-c-notification-badge--pf-icon-attention-bell--LineHeight);
 
     &::before {
-      vertical-align: text-top;
+      vertical-align: bottom;
     }
   }
 
